5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1826_1658.log
== TEST (2019-06-12 19:12:14) 
-- CODE:
v = input("Paises: ").split(',')

s = len(v)

print(s)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:12:24) 
-- CODE:
v = input("Paises: ").split(',')

s = len(v)

print(s)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:14:27) 
-- CODE:
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in s:
	for k in s:
		if i == k:
			for l in range(s):
				z[l] = z[l] + 1
				
				
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    z = zeros(s)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:14:44) 
-- CODE:
from numpy import*
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in s:
	for k in s:
		if i == k:
			for l in range(s):
				z[l] = z[l] + 1
				
				
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:15:19) 
-- CODE:
from numpy import*
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in v:
	for k in v:
		if i == k:
			for l in range(s):
				z[l] = z[l] + 1
				
				
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:15:38) 
-- CODE:
from numpy import*
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in v:
	for k in v:
		if i == k:
			for l in range(s):
				z[l] = z[l] + 1
				
				
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:15:52) 
-- CODE:
from numpy import*
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in v:
	for k in v:
		if i == k:
			for l in range(s):
				z[l] = z[l] + 1
				
				
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:49:12) 
-- CODE:
from numpy import*
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in range(s):
	for k in range(s):
		if v[i] == v[k]
			z[i] = z[i] + 1
print(z)
-- ERROR:
File "XXXX", line 10
    if v[i] == v[k]
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:49:16) 
-- CODE:
from numpy import*
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in range(s):
	for k in range(s):
		if v[i] == v[k]:
			z[i] = z[i] + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:49:35) 
-- CODE:
from numpy import*
v = input("Paises: ").split(',')

s = len(v)

z = zeros(s)

for i in range(s):
	for k in range(s):
		if v[i] == v[k]:
			z[i] = z[i] + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
